syntax = "proto3";

option csharp_namespace = "Discount.API";

package Discount;

service DiscountService {
  rpc GetDiscount (DiscountRequest) returns (DiscountResponse);
}

message DiscountRequest {
  string product_id = 1;
  string user_id = 2;
}

message DiscountResponse {
  float pct = 1;
  int32 value_in_cents = 2;
}
